log/build_2024-06-23_14-49-04/my_py_pkg2/stdout_stderr.log
running egg_info
writing ../../build/my_py_pkg2/my_py_pkg2.egg-info/PKG-INFO
writing dependency_links to ../../build/my_py_pkg2/my_py_pkg2.egg-info/dependency_links.txt
writing entry points to ../../build/my_py_pkg2/my_py_pkg2.egg-info/entry_points.txt
writing requirements to ../../build/my_py_pkg2/my_py_pkg2.egg-info/requires.txt
writing top-level names to ../../build/my_py_pkg2/my_py_pkg2.egg-info/top_level.txt
reading manifest file '../../build/my_py_pkg2/my_py_pkg2.egg-info/SOURCES.txt'
writing manifest file '../../build/my_py_pkg2/my_py_pkg2.egg-info/SOURCES.txt'
running build
running build_py
copying my_py_pkg2/add_two_numbers.py -> /home/lucas/ros2_ws/build/my_py_pkg2/build/lib/my_py_pkg2
running install
running install_lib
copying /home/lucas/ros2_ws/build/my_py_pkg2/build/lib/my_py_pkg2/add_two_numbers.py -> /home/lucas/ros2_ws/install/my_py_pkg2/lib/python3.10/site-packages/my_py_pkg2
byte-compiling /home/lucas/ros2_ws/install/my_py_pkg2/lib/python3.10/site-packages/my_py_pkg2/add_two_numbers.py to add_two_numbers.cpython-310.pyc
  File "/home/lucas/ros2_ws/install/my_py_pkg2/lib/python3.10/site-packages/my_py_pkg2/add_two_numbers.py", line 5
    import example_interfaces.srv import AddTwoInts
                                  ^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/lucas/ros2_ws/install/my_py_pkg2/lib/python3.10/site-packages/my_py_pkg2-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/my_py_pkg2/my_py_pkg2.egg-info to /home/lucas/ros2_ws/install/my_py_pkg2/lib/python3.10/site-packages/my_py_pkg2-0.0.0-py3.10.egg-info
running install_scripts
Installing add_two_ints script to /home/lucas/ros2_ws/install/my_py_pkg2/lib/my_py_pkg2
Installing publisher script to /home/lucas/ros2_ws/install/my_py_pkg2/lib/my_py_pkg2
Installing py_node script to /home/lucas/ros2_ws/install/my_py_pkg2/lib/my_py_pkg2
Installing subscriber script to /home/lucas/ros2_ws/install/my_py_pkg2/lib/my_py_pkg2
writing list of installed files to '/home/lucas/ros2_ws/build/my_py_pkg2/install.log'
